...
      <Tab.Screen
        name="Home"
        component={HomeScreen}
        options={{
          tabBarLabel: 'Reminders',
          tabBarIcon: renderHomeIcon,
          tabBarButtonTestID: 'tab-reminders',
          tabBarAccessibilityLabel: 'Reminders',
        }}
      />
      <Tab.Screen
        name="Settings"
        component={SettingsScreen}
        options={{
          tabBarLabel: 'Settings',
          tabBarIcon: renderSettingsIcon,
          tabBarButtonTestID: 'tab-settings',
          tabBarAccessibilityLabel: 'Settings',
        }}
      />
    </Tab.Navigator>
  );
};
...
